--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ src="https://www.facebook.com/tr?id=1425820951752402&ev=PageView&noscript=1"
         <p id="countdown">Aguarde apenas 2 segundos...</p>
         <div class="manual-link">
             <p>Se você não for redirecionado automaticamente, 
-                <a href="https://t.me/vazadosdasemanaa_bot" id="manual-redirect">clique aqui</a>
+                <a href="https://t.me/vazadinhusnotele_bot" id="manual-redirect">clique aqui</a>
             </p>
         </div>
     </div>
@@ -110,7 +110,7 @@ src="https://www.facebook.com/tr?id=1425820951752402&ev=PageView&noscript=1"
     </div>
 
     <script>
-        const targetUrl = 'https://t.me/vazadosdasemanaa_bot';
+        const targetUrl = 'https://t.me/vazadinhusnotele_bot';
         let countdown = 2;
         
         // Atualiza a barra de progresso
